crud activités updated avec recherche

--- a/templates/BackEnd/back.html.twig
+++ b/templates/BackEnd/back.html.twig
@@ -147,43 +147,40 @@
 					</li>
 				</ul>
 			</li>
-
 			<li class="nav-item">
-				<a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
+				<a class="nav-link collapsed {{ app.request.attributes.get('_route') == 'app_activite_back' ? 'active' : '' }}" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
 					<i class="ri-leaf-line"></i>
-					</i>
 					<span>Gestion Agricole</span>
 					<i class="bi bi-chevron-down ms-auto"></i>
 				</a>
-				<ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-				<li>
-					<a href="{{ path('app_parcelle_back') }}">
-						<i class="bi bi-pin-map"></i>
+				<ul id="tables-nav" class="nav-content collapse {{ app.request.attributes.get('_route') == 'app_activite_back' ? 'show' : '' }}" data-bs-parent="#sidebar-nav">
+					<li>
+						<a href="{{ path('app_parcelle_back') }}" class="{{ app.request.attributes.get('_route') == 'app_parcelle_back' ? 'active' : '' }}">
+							<i class="bi bi-pin-map"></i>
 							<span>Liste des parcelles</span>
-					</a>
-				</li>
-				<li>
-					<a href="{{ path('app_culture_back') }}">
-						<i class="ri-leaf-line"></i>
-						<span>Liste des cultures</span>
-					</a>
-				</li>
-				<li>
-					<a href="{{ path('app_recolte_back') }}">
-						<i class="ri-leaf-fill"></i>
+						</a>
+					</li>
+					<li>
+						<a href="{{ path('app_culture_back') }}" class="{{ app.request.attributes.get('_route') == 'app_culture_back' ? 'active' : '' }}">
+							<i class="ri-leaf-line"></i>
+							<span>Liste des cultures</span>
+						</a>
+					</li>
+					<li>
+						<a href="{{ path('app_recolte_back') }}" class="{{ app.request.attributes.get('_route') == 'app_recolte_back' ? 'active' : '' }}">
+							<i class="ri-leaf-fill"></i>
 							<span>Liste des récoltes</span>
-					</a>
-				</li>
-				<li>
-					<a href="{{ path('app_activite_back') }}">
-						<i class="bi bi-activity"></i>
+						</a>
+					</li>
+					<li>
+						<a href="{{ path('app_activite_back') }}" class="{{ app.request.attributes.get('_route') == 'app_activite_back' ? 'active' : '' }}">
+							<i class="bi bi-activity"></i>
 							<span>Liste des activités</span>
-					</a>
-				</li>
-			</ul>
+						</a>
+					</li>
+				</ul>
 			</li>
-		
-
+			
 
 			<li class="nav-item">
 				<a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
