--- a/templates/BackEnd/back.html.twig
+++ b/templates/BackEnd/back.html.twig
@@ -27,6 +27,9 @@
 	
 		<link href="{{ asset('assets/assetsBack/css/style.css') }}" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		
+
 
 
 	{% endblock %}
